src/qasm_compiler/generated/QASMParser.cpp

// Generated from QASM.g4 by ANTLR 4.13.1


#include "QASMListener.h"

#include "QASMParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct QASMParserStaticData final {
  QASMParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  QASMParserStaticData(const QASMParserStaticData&) = delete;
  QASMParserStaticData(QASMParserStaticData&&) = delete;
  QASMParserStaticData& operator=(const QASMParserStaticData&) = delete;
  QASMParserStaticData& operator=(QASMParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag qasmParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
QASMParserStaticData *qasmParserStaticData = nullptr;

void qasmParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (qasmParserStaticData != nullptr) {
    return;
  }
#else
  assert(qasmParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<QASMParserStaticData>(
    std::vector<std::string>{
      "mainprogram", "version", "program", "statement", "declStatement", 
      "regDeclStatement", "qregDeclStatement", "cregDeclStatement", "gateDeclStatement", 
      "opaqueStatement", "gateStatement", "goplist", "gop", "gopUGate", 
      "gopCXGate", "gopBarrier", "gopCustomGate", "gopReset", "idlist", 
      "paramlist", "qopStatement", "qopUGate", "qopCXGate", "qopMeasure", 
      "qopReset", "qopCustomGate", "ifStatement", "barrierStatement", "arglist", 
      "qarg", "carg", "explist", "exp", "complex", "addsub", "binop", "negop", 
      "unaryop"
    },
    std::vector<std::string>{
      "", "'OPENQASM'", "';'", "'qreg'", "'['", "']'", "'creg'", "'opaque'", 
      "'('", "')'", "'gate'", "'{'", "'}'", "'U'", "'CX'", "','", "'barrier'", 
      "'reset'", "'measure'", "'->'", "'if'", "'=='", "'pi'", "'j'", "'+'", 
      "'-'", "'*'", "'/'", "'sin'", "'cos'", "'tan'", "'exp'", "'ln'", "'sqrt'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "ID", "NNINTEGER", "REAL", "STRING", "Whitespace", "Newline", "LineComment", 
      "BlockComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  qasmParserStaticData = staticData.release();
}

}

QASMParser::QASMParser(TokenStream *input) : QASMParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

QASMParser::QASMParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  QASMParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *qasmParserStaticData->atn, qasmParserStaticData->decisionToDFA, qasmParserStaticData->sharedContextCache, options);
}

QASMParser::~QASMParser() {
  delete _interpreter;
}

const atn::ATN& QASMParser::getATN() const {
  return *qasmParserStaticData->atn;
}

std::string QASMParser::getGrammarFileName() const {
  return "QASM.g4";
}

const std::vector<std::string>& QASMParser::getRuleNames() const {
  return qasmParserStaticData->ruleNames;
}

const dfa::Vocabulary& QASMParser::getVocabulary() const {
  return qasmParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView QASMParser::getSerializedATN() const {
  return qasmParserStaticData->serializedATN;
}


//----------------- MainprogramContext ------------------------------------------------------------------

QASMParser::MainprogramContext::MainprogramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QASMParser::VersionContext* QASMParser::MainprogramContext::version() {
  return getRuleContext<QASMParser::VersionContext>(0);
}

QASMParser::ProgramContext* QASMParser::MainprogramContext::program() {
  return getRuleContext<QASMParser::ProgramContext>(0);
}


size_t QASMParser::MainprogramContext::getRuleIndex() const {
  return QASMParser::RuleMainprogram;
}

void QASMParser::MainprogramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprogram(this);
}

void QASMParser::MainprogramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprogram(this);
}

QASMParser::MainprogramContext* QASMParser::mainprogram() {
  MainprogramContext *_localctx = _tracker.createInstance<MainprogramContext>(_ctx, getState());
  enterRule(_localctx, 0, QASMParser::RuleMainprogram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    version();
    setState(77);
    program(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

QASMParser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QASMParser::VersionContext::REAL() {
  return getToken(QASMParser::REAL, 0);
}


size_t QASMParser::VersionContext::getRuleIndex() const {
  return QASMParser::RuleVersion;
}

void QASMParser::VersionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVersion(this);
}

void QASMParser::VersionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVersion(this);
}

QASMParser::VersionContext* QASMParser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 2, QASMParser::RuleVersion);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(QASMParser::T__0);
    setState(80);
    match(QASMParser::REAL);
    setState(81);
    match(QASMParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

QASMParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QASMParser::StatementContext* QASMParser::ProgramContext::statement() {
  return getRuleContext<QASMParser::StatementContext>(0);
}

QASMParser::ProgramContext* QASMParser::ProgramContext::program() {
  return getRuleContext<QASMParser::ProgramContext>(0);
}


size_t QASMParser::ProgramContext::getRuleIndex() const {
  return QASMParser::RuleProgram;
}

void QASMParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void QASMParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


QASMParser::ProgramContext* QASMParser::program() {
   return program(0);
}

QASMParser::ProgramContext* QASMParser::program(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  QASMParser::ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, parentState);
  QASMParser::ProgramContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, QASMParser::RuleProgram, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(84);
    statement();
    _ctx->stop = _input->LT(-1);
    setState(90);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ProgramContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleProgram);
        setState(86);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(87);
        statement(); 
      }
      setState(92);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

QASMParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QASMParser::DeclStatementContext* QASMParser::StatementContext::declStatement() {
  return getRuleContext<QASMParser::DeclStatementContext>(0);
}

QASMParser::QopStatementContext* QASMParser::StatementContext::qopStatement() {
  return getRuleContext<QASMParser::QopStatementContext>(0);
}

QASMParser::IfStatementContext* QASMParser::StatementContext::ifStatement() {
  return getRuleContext<QASMParser::IfStatementContext>(0);
}

QASMParser::BarrierStatementContext* QASMParser::StatementContext::barrierStatement() {
  return getRuleContext<QASMParser::BarrierStatementContext>(0);
}


size_t QASMParser::StatementContext::getRuleIndex() const {
  return QASMParser::RuleStatement;
}

void QASMParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void QASMParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

QASMParser::StatementContext* QASMParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, QASMParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QASMParser::T__2:
      case QASMParser::T__5:
      case QASMParser::T__6:
      case QASMParser::T__9: {
        enterOuterAlt(_localctx, 1);
        setState(93);
        declStatement();
        break;
      }

      case QASMParser::T__12:
      case QASMParser::T__13:
      case QASMParser::T__16:
      case QASMParser::T__17:
      case QASMParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(94);
        qopStatement();
        break;
      }

      case QASMParser::T__19: {
        enterOuterAlt(_localctx, 3);
        setState(95);
        ifStatement();
        break;
      }

      case QASMParser::T__15: {
        enterOuterAlt(_localctx, 4);
        setState(96);
        barrierStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclStatementContext ------------------------------------------------------------------

QASMParser::DeclStatementContext::DeclStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QASMParser::RegDeclStatementContext* QASMParser::DeclStatementContext::regDeclStatement() {
  return getRuleContext<QASMParser::RegDeclStatementContext>(0);
}

QASMParser::GateDeclStatementContext* QASMParser::DeclStatementContext::gateDeclStatement() {
  return getRuleContext<QASMParser::GateDeclStatementContext>(0);
}


size_t QASMParser::DeclStatementContext::getRuleIndex() const {
  return QASMParser::RuleDeclStatement;
}

void QASMParser::DeclStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclStatement(this);
}

void QASMParser::DeclStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclStatement(this);
}

QASMParser::DeclStatementContext* QASMParser::declStatement() {
  DeclStatementContext *_localctx = _tracker.createInstance<DeclStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, QASMParser::RuleDeclStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QASMParser::T__2:
      case QASMParser::T__5: {
        enterOuterAlt(_localctx, 1);
        setState(99);
        regDeclStatement();
        break;
      }

      case QASMParser::T__6:
      case QASMParser::T__9: {
        enterOuterAlt(_localctx, 2);
        setState(100);
        gateDeclStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RegDeclStatementContext ------------------------------------------------------------------

QASMParser::RegDeclStatementContext::RegDeclStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QASMParser::QregDeclStatementContext* QASMParser::RegDeclStatementContext::qregDeclStatement() {
  return getRuleContext<QASMParser::QregDeclStatementContext>(0);
}

QASMParser::CregDeclStatementContext* QASMParser::RegDeclStatementContext::cregDeclStatement() {
  return getRuleContext<QASMParser::CregDeclStatementContext>(0);
}


size_t QASMParser::RegDeclStatementContext::getRuleIndex() const {
  return QASMParser::RuleRegDeclStatement;
}

void QASMParser::RegDeclStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRegDeclStatement(this);
}

void QASMParser::RegDeclStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRegDeclStatement(this);
}

QASMParser::RegDeclStatementContext* QASMParser::regDeclStatement() {
  RegDeclStatementContext *_localctx = _tracker.createInstance<RegDeclStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, QASMParser::RuleRegDeclStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(105);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QASMParser::T__2: {
        enterOuterAlt(_localctx, 1);
        setState(103);
        qregDeclStatement();
        break;
      }

      case QASMParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(104);
        cregDeclStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QregDeclStatementContext ------------------------------------------------------------------

QASMParser::QregDeclStatementContext::QregDeclStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QASMParser::QregDeclStatementContext::ID() {
  return getToken(QASMParser::ID, 0);
}

tree::TerminalNode* QASMParser::QregDeclStatementContext::NNINTEGER() {
  return getToken(QASMParser::NNINTEGER, 0);
}


size_t QASMParser::QregDeclStatementContext::getRuleIndex() const {
  return QASMParser::RuleQregDeclStatement;
}

void QASMParser::QregDeclStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQregDeclStatement(this);
}

void QASMParser::QregDeclStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQregDeclStatement(this);
}

QASMParser::QregDeclStatementContext* QASMParser::qregDeclStatement() {
  QregDeclStatementContext *_localctx = _tracker.createInstance<QregDeclStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, QASMParser::RuleQregDeclStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(QASMParser::T__2);
    setState(108);
    match(QASMParser::ID);
    setState(109);
    match(QASMParser::T__3);
    setState(110);
    match(QASMParser::NNINTEGER);
    setState(111);
    match(QASMParser::T__4);
    setState(112);
    match(QASMParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CregDeclStatementContext ------------------------------------------------------------------

QASMParser::CregDeclStatementContext::CregDeclStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QASMParser::CregDeclStatementContext::ID() {
  return getToken(QASMParser::ID, 0);
}

tree::TerminalNode* QASMParser::CregDeclStatementContext::NNINTEGER() {
  return getToken(QASMParser::NNINTEGER, 0);
}


size_t QASMParser::CregDeclStatementContext::getRuleIndex() const {
  return QASMParser::RuleCregDeclStatement;
}

void QASMParser::CregDeclStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCregDeclStatement(this);
}

void QASMParser::CregDeclStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCregDeclStatement(this);
}

QASMParser::CregDeclStatementContext* QASMParser::cregDeclStatement() {
  CregDeclStatementContext *_localctx = _tracker.createInstance<CregDeclStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, QASMParser::RuleCregDeclStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(QASMParser::T__5);
    setState(115);
    match(QASMParser::ID);
    setState(116);
    match(QASMParser::T__3);
    setState(117);
    match(QASMParser::NNINTEGER);
    setState(118);
    match(QASMParser::T__4);
    setState(119);
    match(QASMParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateDeclStatementContext ------------------------------------------------------------------

QASMParser::GateDeclStatementContext::GateDeclStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QASMParser::OpaqueStatementContext* QASMParser::GateDeclStatementContext::opaqueStatement() {
  return getRuleContext<QASMParser::OpaqueStatementContext>(0);
}

QASMParser::GateStatementContext* QASMParser::GateDeclStatementContext::gateStatement() {
  return getRuleContext<QASMParser::GateStatementContext>(0);
}


size_t QASMParser::GateDeclStatementContext::getRuleIndex() const {
  return QASMParser::RuleGateDeclStatement;
}

void QASMParser::GateDeclStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGateDeclStatement(this);
}

void QASMParser::GateDeclStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGateDeclStatement(this);
}

QASMParser::GateDeclStatementContext* QASMParser::gateDeclStatement() {
  GateDeclStatementContext *_localctx = _tracker.createInstance<GateDeclStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, QASMParser::RuleGateDeclStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QASMParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(121);
        opaqueStatement();
        break;
      }

      case QASMParser::T__9: {
        enterOuterAlt(_localctx, 2);
        setState(122);
        gateStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OpaqueStatementContext ------------------------------------------------------------------

QASMParser::OpaqueStatementContext::OpaqueStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QASMParser::OpaqueStatementContext::ID() {
  return getToken(QASMParser::ID, 0);
}

QASMParser::IdlistContext* QASMParser::OpaqueStatementContext::idlist() {
  return getRuleContext<QASMParser::IdlistContext>(0);
}

QASMParser::ParamlistContext* QASMParser::OpaqueStatementContext::paramlist() {
  return getRuleContext<QASMParser::ParamlistContext>(0);
}


size_t QASMParser::OpaqueStatementContext::getRuleIndex() const {
  return QASMParser::RuleOpaqueStatement;
}

void QASMParser::OpaqueStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOpaqueStatement(this);
}

void QASMParser::OpaqueStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOpaqueStatement(this);
}

QASMParser::OpaqueStatementContext* QASMParser::opaqueStatement() {
  OpaqueStatementContext *_localctx = _tracker.createInstance<OpaqueStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, QASMParser::RuleOpaqueStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(145);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(125);
      match(QASMParser::T__6);
      setState(126);
      match(QASMParser::ID);
      setState(127);
      idlist();
      setState(128);
      match(QASMParser::T__1);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(130);
      match(QASMParser::T__6);
      setState(131);
      match(QASMParser::ID);
      setState(132);
      match(QASMParser::T__7);
      setState(133);
      match(QASMParser::T__8);
      setState(134);
      idlist();
      setState(135);
      match(QASMParser::T__1);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(137);
      match(QASMParser::T__6);
      setState(138);
      match(QASMParser::ID);
      setState(139);
      match(QASMParser::T__7);
      setState(140);
      paramlist();
      setState(141);
      match(QASMParser::T__8);
      setState(142);
      idlist();
      setState(143);
      match(QASMParser::T__1);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateStatementContext ------------------------------------------------------------------

QASMParser::GateStatementContext::GateStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QASMParser::GateStatementContext::ID() {
  return getToken(QASMParser::ID, 0);
}

QASMParser::IdlistContext* QASMParser::GateStatementContext::idlist() {
  return getRuleContext<QASMParser::IdlistContext>(0);
}

QASMParser::ParamlistContext* QASMParser::GateStatementContext::paramlist() {
  return getRuleContext<QASMParser::ParamlistContext>(0);
}

QASMParser::GoplistContext* QASMParser::GateStatementContext::goplist() {
  return getRuleContext<QASMParser::GoplistContext>(0);
}


size_t QASMParser::GateStatementContext::getRuleIndex() const {
  return QASMParser::RuleGateStatement;
}

void QASMParser::GateStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGateStatement(this);
}

void QASMParser::GateStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QASMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGateStatement(this);
}

QASMParser::GateStatementContext* QASMParser::gateStatement() {
  GateStatementContext *_localctx = _tracker.createInstance<GateStatementContext>(_ctx, getState());
  enterRule(_localctx, 20, QASMParser::RuleGateStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(196);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(147);
      match(QASMParser::T__9);
      setState(148);
      match(QASMParser::ID);
      setState(149);
      idlist();
      setState(150);
      match(QASMParser::T__10);
      setState(151);
      match(QASMParser::T__11);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(153);
      match(QASMParser::T__9);
      setState(154);
      match(QASMParser::ID);
      setState(155);
      match(QASMParser::T__7);
      setState(156);
      match(QASMParser::T__8);
      setState(157);
      idlist();
      setState(158);
      match(QASMParser::T__10);
      setState(159);
      match(QASMParser::T__11);
      break;
    }
